--- a/src/myproject/templates/account_login_page_template.html
+++ b/src/myproject/templates/account_login_page_template.html
@@ -8,8 +8,9 @@
 {% block content %}
     <div class="container d-flex justify-content-center align-items-center" style="min-height: 70vh;">
         <div class="d-flex flex-column align-items-center w-100" style="max-width: 500px;">
-            <h3 class="text-center text-success mb-4">Welcome to Plant Care App! Log in to start managing your plants.</h3>
-            <form method="post" action=".">
+            <h3 class="text-center text-success mb-4">Welcome to Plant Care App! Log in to start managing your
+                plants.</h3>
+            <form method="post" action="." autocomplete="off">
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <br><br>
