--- a/src/plant_care/templates/plant_create_page_template.html
+++ b/src/plant_care/templates/plant_create_page_template.html
@@ -10,7 +10,7 @@
     <div class="container mt-5 mb-5">
         <h1 class="view-header text-center fs-3 m-0">Add new plant </h1>
         <div class="col-md-6 mx-auto">
-            <form method="post" action=".">
+            <form method="post" action="." autocomplete="off">
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <br>
