--- a/src/plant_care/templates/plant_group_create_page_template.html
+++ b/src/plant_care/templates/plant_group_create_page_template.html
@@ -11,7 +11,7 @@
     <div class="container mt-5 mb-5">
         <h1 class="view-header text-center fs-3">Add new group </h1>
         <div class="col-md-6 mx-auto">
-            <form method="post" action=".">
+            <form method="post" action="." autocomplete="off">
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <br>
