--- a/src/plant_care/templates/plant_history_log_update_page_template.html
+++ b/src/plant_care/templates/plant_history_log_update_page_template.html
@@ -9,7 +9,8 @@
 {% block content %}
     <div class="container mt-5 mb-5">
         <h1 class="view-header text-center">Update care history log for:</h1>
-        <a class="text-decoration-none" href="{{ object.plant.get_absolute_url }}"><p class="view-header text-center">{{ object.plant.name }}</p></a>
+        <a class="text-decoration-none" href="{{ object.plant.get_absolute_url }}"><p
+                class="view-header text-center">{{ object.plant.name }}</p></a>
         <div class="col-md-6 mx-auto">
             <form method="post" action="{% url 'plant_care:care-history-update' pk=object.pk %}">
                 {% csrf_token %}
