--- a/src/plant_care/templates/plant_perform_tasks_list_page_template.html
+++ b/src/plant_care/templates/plant_perform_tasks_list_page_template.html
@@ -5,95 +5,114 @@
 {% block bootstrap5_title %}Plant Tasks{% endblock %}
 
 {% block content %}
-    {% if plants %}
-        <div class="container mt-3">
+    <div class="container mt-3">
         <div class="d-flex flex-column align-items-center">
             <br>
             <div class="d-flex justify-content-center w-75">
-                <a class="view-header fs-3 m-0 text-decoration-none text-center" href="{% url 'plant_care:perform-tasks' %}">🪴 Select plant and task 🪴</a>
+                <a class="view-header fs-3 m-0 text-decoration-none text-center"
+                   href="{% url 'plant_care:perform-tasks' %}">🪴 Select plant and task 🪴</a>
             </div>
             <br>
         </div>
         <div class="d-flex justify-content-end w-75">
-                <form method="get" class="d-flex" style="width: auto;" action="{% url 'plant_care:perform-tasks' %}">
-                    <input type="text" name="filter" placeholder="Search plant or group"
-                           value="{{ request.GET.filter }}" class="text-center form-control">
-                    <button type="submit" class="btn ms-2 btn-animace">🔎</button>
-                </form>
+            <form method="get" class="d-flex" autocomplete="off" style="width: auto;"
+                  action="{% url 'plant_care:perform-tasks' %}">
+                <input type="text" name="filter" placeholder="Search plant or group"
+                       value="{{ request.GET.filter }}" class="text-center form-control">
+                <button type="submit" class="btn ms-2 btn-animace">🔎</button>
+            </form>
         </div>
-        <form method="post" action="{% url 'plant_care:perform-tasks' %}">
-            {% csrf_token %}
-            <div class="d-flex justify-content-center align-items-center mb-4 mt-4">
-                <table class="table table-striped table-hover table-bordered table-sm table-responsive"
-                       style="width: 50%">
-                    <thead class="table-success">
-                    <tr>
-                        <th class="text-center" style="width: 5%">
-                            <input type="checkbox" id="select_all"/>
-                        </th>
-                        <th style="width: 40%"><a class="text-decoration-none text-dark" href="?sort={% if request.GET.sort == "name" %}-name{% else %}name{% endif %}&filter={{ request.GET.filter|default:'' }}">Name</a></th>
-                        <th style="width: 40%"><a class="text-decoration-none text-dark" href="?sort={% if request.GET.sort == "group" %}-group{% else %}group{% endif %}&filter={{ request.GET.filter|default:'' }}">Group</a></th>
-                        <th class="text-center">Detail</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for plant in plants %}
+        {% if plants %}
+            <form method="post" action="{% url 'plant_care:perform-tasks' %}">
+                {% csrf_token %}
+                <div class="d-flex justify-content-center align-items-center mb-4 mt-4">
+                    <table class="table table-striped table-hover table-bordered table-sm table-responsive"
+                           style="width: 50%">
+                        <thead class="table-success">
                         <tr>
-                            <td class="text-center">
-                                <input type="checkbox" id="plant-{{ plant.id }}" name="plants" value="{{ plant.id }}">
-                            </td>
-                            <td>
-                            <label for="plant-{{ plant.id }}" class="d-flex align-items-center">
-                                {{ plant.name }}
-                                {% if plant.id in plants_in_danger %}
-                                    <span class="text-warning ms-2">⚠️</span> <!-- span = na stejny radek pridat-->
-                                {% endif %}
-                            </label>
-                            </td>
-                            <td>
-                                <a class="text-decoration-none text-dark"
-                                   href="{% url 'plant_care:plant-group-detail' plant.group.pk %}">{{ plant.group }}</a>
-                            </td>
-                            <td class="text-center">
-                                <a class="text-decoration-none"
-                                   href="{% url 'plant_care:plant-detail' plant.pk %}">🔍</a>
-                            </td>
+                            <th class="text-center" style="width: 5%">
+                                <input type="checkbox" id="select_all"/>
+                            </th>
+                            <th style="width: 40%"><a class="text-decoration-none text-dark"
+                                                      href="?sort={% if request.GET.sort == "name" %}-name{% else %}name{% endif %}&filter={{ request.GET.filter|default:'' }}">Name</a>
+                            </th>
+                            <th style="width: 40%"><a class="text-decoration-none text-dark"
+                                                      href="?sort={% if request.GET.sort == "group" %}-group{% else %}group{% endif %}&filter={{ request.GET.filter|default:'' }}">Group</a>
+                            </th>
+                            <th class="text-center">Detail</th>
                         </tr>
+                        </thead>
+                        <tbody>
+                        {% for plant in plants %}
+                            <tr>
+                                <td class="text-center">
+                                    <input type="checkbox" id="plant-{{ plant.id }}" name="plants"
+                                           value="{{ plant.id }}">
+                                </td>
+                                <td>
+                                    <label for="plant-{{ plant.id }}" class="d-flex align-items-center">
+                                        {{ plant.name }}
+                                        {% if plant.id in plants_in_danger %}
+                                            <span class="text-warning ms-2">⚠️</span>
+                                            <!-- span = na stejny radek pridat-->
+                                        {% endif %}
+                                    </label>
+                                </td>
+                                <td>
+                                    <a class="text-decoration-none text-dark"
+                                       href="{% url 'plant_care:plant-group-detail' plant.group.pk %}">{{ plant.group }}</a>
+                                </td>
+                                <td class="text-center">
+                                    <a class="text-decoration-none"
+                                       href="{% url 'plant_care:plant-detail' plant.pk %}">🔍</a>
+                                </td>
+                            </tr>
 
+                        {% endfor %}
+                        <script src="{% static 'js/select_all_checkbox.js' %}"></script>
 
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="d-flex justify-content-center mt-4">
+                    {% for checkbox in form.task_type %}
+                        <div class="form-check form-check-inline">
+                            {{ checkbox.tag }}
+                            <label class="form-check-label">{{ checkbox.choice_label }}</label>
+                        </div>
                     {% endfor %}
-                    <script src="{% static 'js/select_all_checkbox.js' %}"></script>
-
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="d-flex justify-content-center mt-4">
-                {% for checkbox in form.task_type %}
-                    <div class="form-check form-check-inline">
-                        {{ checkbox.tag }}
-                        <label class="form-check-label">{{ checkbox.choice_label }}</label>
+                </div>
+                <div class="d-flex justify-content-center mt-4">
+                    <div class="w-auto">
+                        {{ form.task_date }}
                     </div>
-                {% endfor %}
-            </div>
-            <div class="d-flex justify-content-center mt-4">
-                <div class="w-auto">
-                    {{ form.task_date }}
+                </div>
+                <div class="d-flex justify-content-center mt-4 mb-4">
+                    <button type="submit" class="btn btn-success btn-animace mb-4">Submit</button>
+                </div>
+            </form>
+
+        {% else %}
+            {% if request.GET.filter %}
+                <div class="d-flex justify-content-center align-items-center mb-4">
+                    <p class="view-header text-center mt-5">There are no results matching the search for
+                        <b>"{{ request.GET.filter }}"</b></p>
+                </div>
+            {% else %}
+                <div class="d-flex justify-content-center align-items-center mb-4">
+                    <p class="view-header text-center mt-5">There are no plants in the database</p>
+                </div>
+            {% endif %}
+            <div class="container">
+                <div class="d-flex justify-content-center mb-2">
+                    <a href="{% url 'plant_care:plant-create' %}" id="a-button"
+                       class="btn btn-success btn-animace me-3">Add new
+                        plant</a>
+                    <a href="{{ request.META.HTTP_REFERER|default:'#'|escape }}"
+                       class="btn btn-success btn-animace">Back</a>
                 </div>
             </div>
-            <div class="d-flex justify-content-center mt-4 mb-4">
-                <button type="submit" class="btn btn-success btn-animace mb-4">Submit</button>
-            </div>
-        </form>
-
-    {% else %}
-        <p class="text-center mt-5">There are no plants in the database.</p>
-        <div class="container">
-            <div class="d-flex justify-content-center mb-2">
-                <a href="{% url 'plant_care:plant-create' %}" class="btn btn-success btn-animace"><b>Add new
-                    plant</b></a>
-            </div>
-        </div>
-    {% endif %}
-</div>
+        {% endif %}
+    </div>
 {% endblock %}
