History pagination, fixed warnings, updated perform task view

--- a/src/plant_care/templates/plant_care_history_listing_page_template.html
+++ b/src/plant_care/templates/plant_care_history_listing_page_template.html
@@ -71,6 +71,9 @@
                 </tbody>
             </table>
         </div>
+
+        {% include 'snippets/pagination.html' %}
+
     {% else %}
         {% if request.GET.filter %}
             <div class="d-flex justify-content-center align-items-center mb-3">
